[package]
name = "cachewipe"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Glob file delete that respects gitignore"
documentation = "https://docs.rs/cachewipe"
readme = "README.md"
homepage = "https://github.com/ewpratten/cachewipe"
repository = "https://github.com/ewpratten/cachewipe"
license = "GPL-3.0"
keywords = ["regex-delete", "dev-utility"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitignore = "1.0.7"
clap = "2.33"
regex = "1"
walkdir = "2"
failure = "0.1.8"